fix: `[m]` tags now wrap text properly.

--- a/app/components/board/post/styles.module.css
+++ b/app/components/board/post/styles.module.css
@@ -147,6 +147,7 @@
   margin: unset;
   font-size: larger;
   display: inline;
+  white-space: wrap;
 }
 
 .message img {
